--- a/table/javascript/assignment1.html
+++ b/table/javascript/assignment1.html
@@ -149,7 +149,7 @@
              else{
                 console.log("number is not divisible by 84")
              }
-             
+             var a=10;
 
 
              
