--- a/array of objects using functions/objectsusingfunctions1.html
+++ b/array of objects using functions/objectsusingfunctions1.html
@@ -253,7 +253,8 @@
        var h=s.map(function(a){
         return a.firstname+a.lastname
        })
-        console.log(h)
+        console.log(h);
+        console.log("hello")
         
 
             
