--- a/javascript/assignment1.html
+++ b/javascript/assignment1.html
@@ -150,6 +150,7 @@
                 console.log("number is not divisible by 84")
              }
              var a=10;
+             console.log(a);
 
 
              
