--- a/objects/array of objects.html
+++ b/objects/array of objects.html
@@ -298,6 +298,7 @@
                 //     else{
                 //         console.log(marks[a],"fail")
                 //     }
+                console.log(a);
 
 
               
